k8s/traefik-conf/app1-ext-old-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: app1
spec:
  externalName: old.mycompany.internal
  type: ExternalName
